优化样式效果

--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -1,10 +1,9 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context="com.example.twy.gaodetest.MainActivity"
-    android:orientation="vertical">
+    tools:context="com.example.twy.gaodetest.MainActivity">
 
     <TextView
         android:id="@+id/tv"
@@ -15,4 +14,11 @@
         android:textColor="#333333"
         android:padding="10dp"/>
 
-</LinearLayout>
+    <com.example.twy.gaodetest.BounceLoadingView
+        android:id="@+id/loading_view"
+        android:layout_width="50dp"
+        android:layout_height="wrap_content"
+        android:visibility="gone"
+        android:layout_centerInParent="true"/>
+
+</RelativeLayout>
